--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -20,7 +20,7 @@ cluster.name: {{ cluster_name }}
 #
 # Use a descriptive name for the node:
 #
-node.name: {{ inventory_hostname }}-{{ node_name }}
+node.name: {{ elasticsearchIP }}-{{ node_name }}
 node.master: {{ node_master }}
 node.data: {{ node_data }}
 #
