--- a/templates/elasticsearch.yml.j2
+++ b/templates/elasticsearch.yml.j2
@@ -42,8 +42,7 @@ path.logs: {{ log_path }}
 #
 # Lock the memory on startup:
 #
-#bootstrap.memory_lock: true
-bootstrap.memory_lock: {{ m_lock }}
+#bootstrap.memory_lock: {{ m_lock }}
 #
 # Make sure that the heap size is set to about half the memory available
 # on the system and that the owner of the process is allowed to use this
