--- a/templates/elasticsearch-7.yml.j2
+++ b/templates/elasticsearch-7.yml.j2
@@ -20,12 +20,12 @@ cluster.name: {{ cluster_name }}
 #
 # Use a descriptive name for the node:
 #
-node.name: {{ esIP }}-node
+node.name: {{ es_IP }}-node
 #node.master:
 #node.data:
 
 cluster.initial_master_nodes:
-- {{ esIP }}
+- {{ es_IP }}
 
 #
 # Add custom attributes to the node:
@@ -58,7 +58,7 @@ bootstrap.memory_lock: false
 #
 # Set the bind address to a specific IP (IPv4 or IPv6):
 #
-network.host: {{ esIP }}
+network.host: {{ es_IP }}
 #
 # Set a custom port for HTTP:
 #
