every master node will now added to initial cluster master tag

--- a/templates/elasticsearch-7.yml.j2
+++ b/templates/elasticsearch-7.yml.j2
@@ -25,7 +25,9 @@ node.name: {{ es_IP }}-node
 #node.data:
 
 cluster.initial_master_nodes:
-- {{ es_IP }}
+{% for host in groups['esm'] %}
+- {{hostvars[host]['ansible_host']}}
+{% endfor %}
 
 #
 # Add custom attributes to the node:
