--- a/templates/elasticsearch-7.yml.j2
+++ b/templates/elasticsearch-7.yml.j2
@@ -100,6 +100,8 @@ discovery.zen.minimum_master_nodes: 1
 action.destructive_requires_name: true
 xpack.monitoring.collection.enabled: true
 xpack.security.transport.ssl.enabled: true
+xpack.security.transport.ssl.enabled: true
 xpack.security.transport.ssl.verification_mode: certificate 
-xpack.security.transport.ssl.keystore.path: certs/elasticsearch.p12 
-xpack.security.transport.ssl.truststore.path: certs/elasticsearch.p12 
+xpack.security.transport.ssl.key: /etc/elasticsearch/certs/{{ es_IP }}-node.key
+xpack.security.transport.ssl.certificate: /etc/elasticsearch/certs/{{ es_IP }}-node.crt
+xpack.security.transport.ssl.certificate_authorities: [ "/etc/elasticsearch/certs/ca.crt" ] 
